logs/genepidgin.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/genepidgin'...
Compiling './lib/python3.5/site-packages/genepidgin/cleaner.py'...
***   File "./lib/python3.5/site-packages/genepidgin/cleaner.py", line 1637
    print "didn't like source name '%s' at all - filtered to nothing" % origName
                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/genepidgin/cmdline.py'...
***   File "./lib/python3.5/site-packages/genepidgin/cmdline.py", line 40
    print "Need more files to select from."
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/genepidgin/evaluator.py'...
***   File "./lib/python3.5/site-packages/genepidgin/evaluator.py", line 10
    print "Loaded %d names from file %s." % (len(names), filename)
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/genepidgin/selector.py'...
***   File "./lib/python3.5/site-packages/genepidgin/selector.py", line 104
    print NOW(), "loading name reference files"
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/genepidgin/stemmer.py'...
***   File "./lib/python3.5/site-packages/genepidgin/stemmer.py", line 402
    print output,
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/genepidgin/test'...
Compiling './lib/python3.5/site-packages/genepidgin/test/cli_test.py'...
***   File "./lib/python3.5/site-packages/genepidgin/test/cli_test.py", line 28
    raise Exception, "Could not find 'pidgin select' in select help output"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/genepidgin/test/data'...
Compiling './lib/python3.5/site-packages/genepidgin/util.py'...
***   File "./lib/python3.5/site-packages/genepidgin/util.py", line 54
    raise Exception, "could not read from file %s" % filename
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/genepidgin-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
